<resources>
    <string name="app_name">TraCar</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="errorEmpty">One or more fields are empty.</string>
    <string name="infoSaved">Vehicle saved!</string>
    <string name="errorFull">You can not add more vehicles, 5 is the maximum.</string>
    <string name="createTitle">Add Vehicle</string>
    <string name="hintModel">Model</string>
    <string name="hintLicense">License</string>
    <string name="hintNumber">Number</string>
    <string name="hintPin">Code</string>
    <string-array name="vehicles">
        <item>Car</item>
        <item>Bike</item>
    </string-array>
    <string name="save">Save</string>
    <string name="model">MODEL: </string>
    <string name="license">LICENSE PLATE: </string>
    <string name="hintBrand">Brand</string>
    <string name="hintName">Name</string>
    <string name="coordinates">Coordinates</string>
    <string name="about">About</string>
    <string name="author">Authors:</string>
    <string name="info">This application was created with the purpose of aiding the use of your GPS tracker.</string>
    <string name="disclaimer">This application is currently under development, therefore some of its features may not work properly.</string>
    <string name="map">Map link</string>
</resources>
