<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/createTitle"
        android:text="@string/createTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_centerHorizontal="true"
        android:textSize="22sp"/>

    <EditText
        android:id="@+id/txtBrand"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/createTitle"
        android:hint="@string/hintBrand"
        android:inputType="text"/>

    <EditText
        android:id="@+id/txtModel"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/txtBrand"
        android:hint="@string/hintModel"
        android:inputType="text"/>

    <EditText
        android:id="@+id/txtLicense"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/txtModel"
        android:hint="@string/hintLicense"
        android:inputType="text"/>

    <EditText
        android:id="@+id/txtNumber"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/txtLicense"
        android:hint="@string/hintNumber"
        android:inputType="phone"/>

    <EditText
        android:id="@+id/txtPin"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/txtNumber"
        android:hint="@string/hintPin"
        android:text="666666"
        android:inputType="numberPassword"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/txtPin"
        android:drawSelectorOnTop="true"
        android:entries="@array/vehicles">

    </Spinner>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/save"
        android:onClick="save"/>

</RelativeLayout>